--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>tandoor_hut</title>
+  <title>Tandoor Hut</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -47,7 +47,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=2905120801');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=781512414');
       });
     }
   </script>
